# smart_notes

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
images/: icon.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/folder/: Folder.cpp  folder.cpp  folder.h  folder.ui
src/note/: Note.cpp  Note.ui  modelsNote.cpp  modelsNote.h  note.cpp  note.h  note.ui  notelistwidget.cpp  notelistwidget.h  notelistwidget.ui  notemanager.cpp  notemanager.h
src/note/models/: modelsNote.cpp  modelsNote.h
